pcmtools (1.1-1) UNRELEASED; urgency=low

  * UNRELEASED
  * New upstream version 1.1
  * debian/pcmtools.lintian-overrides: Rename all mkzg* to mkcg.*.

 --

pcmtools (1.0-1) unstable; urgency=medium

  * Initial release (Closes: #730401).

 -- Stephan Linz <linz@li-pro.net>  Sat, 25 Jan 2020 15:07:19 +0100